// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pad test Looper renders correctly 1`] = `
<div>
  <div
    aria-label="Pad"
    class="sc-bdvvtL fngWLE"
  >
    <svg
      height="50%"
      width="50%"
    >
      play.svg
    </svg>
  </div>
</div>
`;

exports[`Pad test Pad active 1`] = `
<div>
  <div
    aria-label="Pad"
    class="sc-bdvvtL bMQvHd"
  >
    <svg
      height="50%"
      width="50%"
    >
      will_play.svg
    </svg>
  </div>
</div>
`;

exports[`Pad test Pad playing 1`] = `
<div>
  <div
    aria-label="Pad"
    class="sc-bdvvtL gISjDH"
  >
    <svg
      height="50%"
      width="50%"
    >
      playing.svg
    </svg>
  </div>
</div>
`;
